# spaider

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  RELEASING.md  SECURITY.md  docker-compose.airflow.yml  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml
backend/: .env.example  Dockerfile  Dockerfile.worker  pyproject.toml
backend/airflow/: Dockerfile.airflow
backend/airflow/dags/: graph_maintenance_dag.py  synthesizer_dag.py
backend/app/: config.py  logging_config.py  logging_context.py  main.py  mcp_standalone.py  worker.py
backend/app/api/: router.py
backend/app/connectors/: __init__.py  mcp_connector.py  runner.py  sql_connector.py  trafilatura_url_connector.py  upload_connector.py
backend/app/core/: security.py
backend/app/db/: postgres.py
backend/app/lib/: consolidation.py  litellm_retry.py
backend/app/middleware/: __init__.py  auth_middleware.py  cors.py  logging_middleware.py  rate_limiter.py
backend/app/models/: connector.py  requests.py  responses.py  schemas.py  training.py
backend/app/prompts/: compressor_system.txt  query_translator.txt  synthesizer_qa.txt
backend/app/scheduler/: __init__.py  connector_scheduler.py
backend/app/scripts/: benchmark_suite.py  reembed_agent.py  run_consolidation.py  synthesizer_export.py
backend/app/services/: analytics_service.py  auth_service.py  cognitive_engine.py  compressor.py  embedding_service.py  entity_resolver.py  graph_service.py  kafka_consumer.py  kafka_producer.py  parser_service.py  query_service.py  redis_service.py  replay_service.py  secrets_service.py  swarm_service.py  synthesizer.py  ws_manager.py
backend/app/utils/: __init__.py  cypher_builder.py  graph_algorithms.py  jsonl_formatter.py
backend/app/workers/: rem_sleep_worker.py  swarm_listener.py
backend/scripts/: migrate_api_keys_to_sha256.py
backend/tests/: conftest.py  test_auth.py  test_compressor.py  test_e2e_spaider.py  test_entity_resolver.py  test_graph_service.py  test_ingest_graph.py  test_kafka_consumer.py  test_logging_middleware.py  test_memory.py  test_query_service.py  test_replay_service.py  test_swarm_service.py  test_swarm_specialists.py  test_synthesizer.py
backend/tests/api/: test_agents.py  test_delete.py  test_ingest_fact_node.py  test_mcp_server.py  test_runstate_persistence.py  test_swarm_observability.py  test_swarm_sse.py  test_synthesize_export.py
backend/tests/connectors/: test_mcp_connector.py  test_sql_connector.py
backend/tests/eval/: run_eval.py  test_cases.json
backend/tests/lib/: test_consolidation.py  test_litellm_retry.py
backend/tests/services/: test_auth_service.py  test_parser_service.py  test_query_service.py
benchmarks/: .gitignore  COMPARISON.md  COMPARISON_ANALYSIS.md  COMPARISON_SYSTEMS.md  README.md  __init__.py  community_compare.py  community_scorecard.py  comparison_systems.json  dashboard.py  gen_synthetic_corpus.py  generate_corpus.py  generate_hotpotqa_haystack.py  pyproject.toml  rejudge.py  run_adapter.py  runner.py  scorecard_acmeai.md  scorecard_hotpotqa.md  seed.py  seed_competitors.py  systems_scorecard.py
benchmarks/adapters/: README.md  __init__.py  base.py  cognee_adapter.py  mem0_adapter.py  spaider_adapter.py
benchmarks/corpus/: acmeai_30d.txt  acmeai_30d.yaml  hotpotqa_24.yaml  hotpotqa_haystack.txt  hotpotqa_haystack.yaml  hotpotqa_haystack_500k.txt  hotpotqa_haystack_500k.yaml  nexora.txt  nexora.yaml  nexora_mid.txt  nexora_mid.yaml
benchmarks/runs/: .gitignore
benchmarks/scripts/: restructure_hotpotqa_prompts.py
benchmarks/tasks/: 01_merge_order.yaml  02_missing_await.yaml  03_duplicate_class.yaml  04_recall_branch_pref.yaml  05_recall_hot_files.yaml
benchmarks/tasks/acmeai/: acme_01.yaml  acme_02.yaml  acme_03.yaml  acme_04.yaml  acme_05.yaml  acme_06.yaml  acme_07.yaml  acme_08.yaml  acme_09.yaml  acme_10.yaml  acme_11.yaml  acme_12.yaml  acme_13.yaml  acme_14.yaml  acme_15.yaml  acme_16.yaml
benchmarks/tasks/compounding_brain/: cb_01_top_risks.yaml  cb_02_globex_status.yaml  cb_03_assign_atlas_perf.yaml  cb_04_openai_fallback.yaml  cb_05_unowned_blocker.yaml  cb_06_stark_arc.yaml  cb_07_quiet_account.yaml  cb_08_atlas_health.yaml  cb_09_cross_reference.yaml  cb_10_headcount.yaml
benchmarks/tasks/hotpotqa/: hp_01_were_scott_derrickson_and_ed_wood_of_the.yaml  hp_02_what_government_position_was_held_by_the.yaml  hp_03_what_science_fantasy_young_adult_series.yaml  hp_04_are_the_laleli_mosque_and_esma_sultan_ma.yaml  hp_05_the_director_of_the_romantic_comedy__big.yaml  hp_06_2014_s_s_is_the_debut_album_of_a_south_k.yaml  hp_07_who_was_known_by_his_stage_name_aladin_a.yaml  hp_08_the_arena_where_the_lewiston_maineiacs_p.yaml  hp_09_who_is_older__annie_morton_or_terry_rich.yaml  hp_10_are_local_h_and_for_against_both_from_th.yaml  hp_11_what_is_the_name_of_the_fight_song_of_th.yaml  hp_12_what_screenwriter_with_credits_for__evol.yaml  hp_13_what_year_did_guns_n_roses_perform_a_pro.yaml  hp_14_are_random_house_tower_and_888_7th_avenu.yaml  hp_15_the_football_manager_who_recruited_david.yaml  hp_16_brown_state_fishing_lake_is_in_a_country.yaml  hp_17_the_vermont_catamounts_men_s_soccer_team.yaml  hp_18_are_giuseppe_verdi_and_ambroise_thomas_b.yaml  hp_19_roger_o__egeberg_was_assistant_secretary.yaml  hp_20_which_writer_was_from_england__henry_rot.yaml  hp_21_which_other_mexican_formula_one_race_car.yaml  hp_22_this_singer_of_a_rather_blustery_day_als.yaml  hp_23_aside_from_the_apple_remote__what_other.yaml  hp_24_which_performance_act_has_a_higher_instr.yaml
benchmarks/tasks/nexora/: nx_01.yaml  nx_02.yaml  nx_03.yaml  nx_04.yaml  nx_05.yaml  nx_06.yaml  nx_07.yaml  nx_08.yaml  nx_09.yaml  nx_10.yaml  nx_11.yaml  (+10 more)
benchmarks/tests/: test_runner.py
cli/: LICENSE  README.md  pyproject.toml
cli/tests/: test_agent.py  test_doctor.py  test_env.py  test_init.py  test_mcp.py  test_smoke.py
packaging/spaider-placeholder/: README.md  pyproject.toml
sdk/python/: CHANGELOG.md  README.md  pyproject.toml
sdk/python-stub/: README.md  pyproject.toml
(+202 files in other folders)
