[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spaider-backend"
version = "0.1.0"
description = "SpAIder — agent-scoped knowledge graph backend"
license = "AGPL-3.0-only"
requires-python = ">=3.11"
# Runtime dependencies — same set previously listed in requirements.txt,
# minus pytest/aiosqlite (now under [project.optional-dependencies] dev).
dependencies = [
    "fastapi==0.138.0",
    "uvicorn[standard]==0.49.0",
    # pydantic >=2.10 is the first release with Python 3.13 support.
    "pydantic>=2.10,<3",
    "pydantic-settings>=2.6",
    "litellm>=1.67.0",
    # C-extension deps below pinned to versions that ship cp313 wheels.
    "aiokafka>=0.12.0",
    "redis[hiredis]>=5.2.0",
    "neo4j==6.2.0",
    "python-jose[cryptography]==3.5.0",
    "passlib[bcrypt]==1.7.4",
    "networkx==3.6.1",
    "numpy>=2.2.0",
    "pandas>=2.2.3",
    "python-multipart==0.0.32",
    "httpx==0.28.1",
    "Levenshtein>=0.26.0",
    "clickhouse-connect>=0.7.0",
    "cryptography>=43.0.0",
    "python-json-logger>=2.0.7",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "pdfplumber>=0.11.4",
    "python-docx>=1.1.2",
    "trafilatura>=1.12.0",
    "markdown-it-py>=3.0.0",
    "mcp>=1.9.0",  # Streamable HTTP transport (StreamableHTTPSessionManager)
]

[project.optional-dependencies]
# Installed in Docker images via `uv pip install --system .[dev]` so
# `python -m pytest` works inside the running container. Adds ~12 MB.
# ruff / mypy / pre-commit are dev-host tools but live here too so a
# single `pip install -e .[dev]` on a workstation gets everything.
dev = [
    "pytest==9.1.1",
    "pytest-asyncio==1.4.0",
    "pytest-mock==3.15.1",
    "pytest-cov>=5.0",
    "aiosqlite>=0.20.0",
    "ruff>=0.6",
    "mypy>=1.10",
    "pre-commit>=3.7",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
exclude = ["tests*", "scripts*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
markers = [
    "smoke: fast smoke tests (run by the pre-commit hook in Phase 2b)",
]

[tool.ruff]
# 120 accommodates embedded Cypher and long string literals without scattering
# per-line noqa; still tight enough to keep code readable.
line-length = 120
target-version = "py311"

[tool.ruff.lint]
# Conservative initial set so existing code passes; expand in follow-ups.
# E/W = pycodestyle, F = pyflakes, I = isort. Add B/UP/SIM/etc. as the
# codebase complies.
select = ["E", "F", "W", "I"]
ignore = []

[tool.mypy]
# Incremental adoption — start with the surfaces that produced the worst
# recent type bugs (missing `await` on parser; `httpx.Timeout(total=…)`;
# duplicate `RotateKeyResponse` class). Expand later.
python_version = "3.11"
files = [
    "app/connectors",
    "app/services/parser_service.py",
    "app/api/v1/ingest.py",
]
strict = false
warn_return_any = true
warn_unused_configs = true
# litellm, mcp, aioredis, etc. are untyped or have stub gaps; do not block
# on those at the boundary.
ignore_missing_imports = true
