[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spaider-benchmarks"
version = "0.1.0"
description = "Reproducible vanilla-vs-with-MCP comparisons of Claude on SpAIder-relevant tasks"
requires-python = ">=3.11"
# Runtime deps for the runner. Streamlit + altair only needed for the
# dashboard, so they live under [project.optional-dependencies] dashboard.
dependencies = [
    "litellm>=1.50",
    "mcp>=1.0",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "pydantic>=2.9",
]

[project.optional-dependencies]
dashboard = [
    "streamlit>=1.38",
    "altair>=5.0",
    "pandas>=2.2",
    "matplotlib>=3.8",
]
# Optional: pull in the deepeval library for native test reports.
# F1/EM/GEval metrics are computed by our pure-Python runner without it.
deepeval = [
    "deepeval>=1.0",
]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
]

[project.scripts]
spaider-benchmark = "benchmarks.runner:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["benchmarks*"]
exclude = ["benchmarks.runs*", "benchmarks.tasks*", "benchmarks.tests*"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
