[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "spaider-client"
version = "0.1.0"
description = "Official Python SDK for SpAIder Memory Infrastructure"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.9"
authors = [{ name = "Spaider Studio" }]
keywords = ["ai", "memory", "knowledge-graph", "neo4j", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/Spaider-studio/spaider"
Repository = "https://github.com/Spaider-studio/spaider"
Documentation = "https://github.com/Spaider-studio/spaider/tree/main/sdk/python"
Issues = "https://github.com/Spaider-studio/spaider/issues"
Changelog = "https://github.com/Spaider-studio/spaider/blob/main/sdk/python/CHANGELOG.md"

[project.optional-dependencies]
langchain = ["langchain>=0.3.0", "langchain-core>=0.3.0"]
llamaindex = ["llama-index>=0.11.0"]
all = ["spaider-client[langchain,llamaindex]"]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-httpx>=0.30.0",
    "ruff>=0.4.0",
]

[tool.setuptools]
license-files = ["LICENSE"]

[tool.setuptools.packages.find]
where = ["."]
include = ["spaider*"]

[tool.setuptools.package-data]
spaider = ["py.typed"]

[tool.ruff]
line-length = 120
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
